<resources>
    <string name="app_name">POSApplication</string>
    <string name="signIn">Sign In</string>
    <string name="registration">Registration</string>
    <string name="title_activity_registration">Registration</string>
    <!-- Strings used for Registration -->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="role_in_organisation">Role in Organisation</string>
    <string name="country">Country</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="confrimation_message">Thank you for registering with us. We\'ll
        get in contact with you regarding the next steps</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_name">Product Name</string>
    <string name="product_pride">$222</string>
    <string name="receipt">Receipt</string>
    <string name="pay_now">Pay Now</string>
    <string name="open_receipts">Open Receipts</string>
    <string name="save_receipt">Save Receipt</string>
    <string name="name_hint">Name</string>
    <string name="comment_hint">Comments</string>
    <string name="search">Search</string>
    <string name="ticket">Ticket-3:45</string>
    <string name="employee_name">Employee Name</string>
    <string name="cashier_name">Cashier Name</string>
    <string name="device_id">Device ID</string>
    <string name="item_name">Item Name</string>
    <string name="sous_total">Sous-total</string>
    <string name="tps">TPS, 5%</string>
    <string name="tvq">TVQ, 9.975</string>
    <string name="total">Total</string>
    <string name="payment_mode">Payment Mode</string>
  
</resources>