<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Registration">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/logo_layout"
        android:background="@color/colorPrimaryGreen"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_t360_white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginLeft="@dimen/text_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:id="@+id/tv_full_name"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorBlack"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/edt_full_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/button_text_size"
            android:padding="@dimen/text_margin_top"
            android:layout_marginRight="@dimen/text_margin_right"
            android:layout_marginTop="@dimen/text_margin_top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/tv_email"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/button_margin_top"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/edt_email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/button_text_size"
            android:padding="@dimen/text_margin_top"
            android:layout_marginRight="@dimen/text_margin_right"
            android:layout_marginTop="@dimen/text_margin_top"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organisation_name"
            android:id="@+id/tv_organisation_name"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/button_margin_top"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/edt_organisation_name"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/text_margin_top"
            android:textSize="@dimen/button_text_size"
            android:layout_marginRight="@dimen/text_margin_right"
            android:layout_marginTop="@dimen/text_margin_top"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_in_organisation"
            android:id="@+id/tv_role_in_organisation"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/button_margin_top"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/edt_role_in_organisation"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/button_text_size"
            android:padding="@dimen/text_margin_top"
            android:layout_marginRight="@dimen/text_margin_right"
            android:layout_marginTop="@dimen/text_margin_top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:id="@+id/tv_country"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/button_margin_top"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin_top"
            android:layout_marginTop="@dimen/text_margin_top"
            android:background="@drawable/rectangle"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt"
            android:layout_marginRight="@dimen/text_margin_right"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectanglegreen"
            android:gravity="center"
            android:id="@+id/btn_registration"
            android:text="@string/registration"
            android:textSize="@dimen/button_text_size"
            android:layout_marginRight="@dimen/button_margin_right"
            android:layout_marginLeft="@dimen/button_margin_left"
            android:layout_marginTop="@dimen/button_margin_top"/>


    </LinearLayout>

</LinearLayout>