<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/receipt"
            android:textSize="@dimen/action_bar_title_size"
            android:layout_marginLeft="@dimen/text_margin_top"
            android:textColor="@color/colorBlack"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo_t360"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin_right"/>
    </LinearLayout>
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3.5"
     >
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_recept_item_list"/>
  </ScrollView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/pay_now"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_text_size"
            android:background="@color/colorPrimaryGreen"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/open_receipts"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/button_text_size"
            android:layout_marginTop="@dimen/text_margin_top"
            android:background="@drawable/rectangle_green_border"/>
    </LinearLayout>

</FrameLayout>